--- a/meccsek.html
+++ b/meccsek.html
@@ -830,7 +830,7 @@ async function refreshBalance() {
     }
 }
 
-function checkGoals() {
+async function checkGoals() {
     if (!allMatches || !Array.isArray(allMatches)) return;
 
     allMatches.forEach(match => {
@@ -2222,6 +2222,7 @@ if (typeof socket !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
