--- a/meccsek.html
+++ b/meccsek.html
@@ -1038,7 +1038,7 @@ function getSmartOdds(match) {
     }
     return result;
 }
-let cachedUserBets = JSON.parse(localStorage.getItem('lp_activeBets')        
+let cachedUserBets = JSON.parse(localStorage.getItem('lp_activeBets') || '[]');   
 
 // --- 5. MEGJELENÍTÉS ---
 async function renderMatches() {
@@ -1054,12 +1054,15 @@ async function renderMatches() {
         fetch(`/api/user/bets?userId=${Clerk.user.id}&t=${Date.now()}`)
             .then(res => res.json())
             .then(data => {
-                cachedUserBets = data;
-                localStorage.setItem('lp_activeBets', JSON.stringify(data));
-                // Csak akkor rajzolunk újra, ha tényleg változott valami, 
-                // vagy egyszerűen csak frissítjük a kártyák "bet-section" részét.
-                executeRender(cachedUserBets);
-            })
+    const newDataStr = JSON.stringify(data);
+    const oldDataStr = JSON.stringify(cachedUserBets);
+    
+    if (newDataStr !== oldDataStr) { // Csak akkor renderelünk újra, ha van változás
+        cachedUserBets = data;
+        localStorage.setItem('lp_activeBets', newDataStr);
+        executeRender(cachedUserBets);
+    }
+})
             .catch(err => console.warn("Bet fetch error, using cache"));
     }
 }
@@ -2162,4 +2165,5 @@ if (typeof socket !== 'undefined') {
     </script>
 </body>
 </html>
+
 
