--- a/meccsek.html
+++ b/meccsek.html
@@ -722,7 +722,8 @@ let activeBets = JSON.parse(localStorage.getItem('lp_activeBets')) || [];
 let currentLeagueId = 'all'; // Alapból minden liga
 let isFirstLoad = true; // Segédváltozó a legtetejére
 let activeChatId = null; // Itt tároljuk, melyik meccs chatje van épp nyitva
-const chatHistory = {};  // Tárolja az üzeneteket meccsenként        
+const chatHistory = {};  // Tárolja az üzeneteket meccsenként   
+let balanceInterval = null; // Ez hiányzik a kódodból        
         
 
 // --- 2. SEGÉDFÜGGVÉNYEK ---
@@ -2173,6 +2174,7 @@ if (typeof socket !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
